# monty

./: .env.example  .gitignore  README.md  add.c  alembic.ini  div.c  execute.c  free_stack.c  main.c  monty  monty.h  pint.c  push_pall.c  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_core_tables.py
src/sports_research_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sportslab/: cli.py  config.py
src/sportslab/backtest/: evaluate.py  settle.py
src/sportslab/db/: models.py  session.py
src/sportslab/features/: football_features.py
src/sportslab/grouping/: create_groups.py
src/sportslab/ingest/: budget.py  demo_seed.py  fetch_historical.py  fetch_stats.py  fetch_upcoming.py
src/sportslab/ingest/providers/: api_football.py
src/sportslab/models/: predict_football.py  train_football.py
tests/: test_grouping.py
