[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-research-lab"
version = "0.1.0"
description = "Personal sports ML research lab for prediction, grouping, and backtesting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "typer>=0.12",
  "requests>=2.32",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
sportslab = "sportslab.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
